Fixed the quote ticker not showing the 4th quote.  Moved animation keyframes from app.css into quotes.css where it belongs, missed it the first time through.

--- a/src/App.css
+++ b/src/App.css
@@ -24,23 +24,3 @@ body {
 @import url('./css/reviews.css');
 @import url('./css/about.css');
 @import url('./css/footer.css');
-
-/* ANIMATION KEYFRAMES: */
-
-@keyframes ticker {
-  0% {
-    margin-top: 0;
-  }
-  25% {
-    margin-top: -30px;
-  }
-  50% {
-    margin-top: -60px;
-  }
-  75% {
-    margin-top: -90px;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
